# object_detetection

./: README.md  package.xml  setup.py
launch/: dual_lidar_launch.py
logs/: dados_robo_parado_100cm.txt  dados_robo_parado_50cm.txt  dados_robo_parado_diagonal.txt  laser_cenario_8_teste_01.txt  test_2.txt  test_3.txt  teste_cenario_10_primeiro.txt  teste_laser_cenario_1.txt  teste_laser_cenario_10.txt  teste_laser_cenario_10_correto.txt  teste_laser_cenario_11.txt  teste_laser_cenario_12.txt  teste_laser_cenario_13.txt  teste_laser_cenario_14.txt  teste_laser_cenario_14_correto.txt  teste_laser_cenario_15.txt  teste_laser_cenario_15_correto.txt  teste_laser_cenario_16.txt  teste_laser_cenario_17.txt  teste_laser_cenario_2.txt  teste_laser_cenario_3.txt  teste_laser_cenario_4.txt  teste_laser_cenario_5.txt  teste_laser_cenario_6.txt  teste_laser_cenario_7.txt  teste_laser_cenario_8.txt  teste_laser_cenario_9.txt
logs/teste_cenario_visao_quad_maior/laser/: laser_cenario_visao_quad_maior_01.txt  laser_cenario_visao_quad_maior_02.txt  laser_cenario_visao_quad_maior_03.txt  laser_cenario_visao_quad_maior_04.txt  laser_cenario_visao_quad_maior_05.txt  laser_cenario_visao_quad_maior_06.txt  laser_cenario_visao_quad_maior_07.txt  laser_cenario_visao_quad_maior_08.txt  laser_cenario_visao_quad_maior_09.txt  laser_cenario_visao_quad_maior_10.txt
logs/teste_cenario_visao_quad_maior/visao/: visao_cenario_visao_quad_maior_01.txt  visao_cenario_visao_quad_maior_02.txt  visao_cenario_visao_quad_maior_03.txt  (+7 more)
object_detection/: object_detection_node.py
(+20 files in other folders)
