<?xml version="1.0"?>
<package format="3">
  <name>object_detection</name>
  <version>0.0.1</version>
  <description>Pacote para detecção de objetos redondos a partir dos dados do RPLidar</description>
  <maintainer email="seuemail@example.com">Seu Nome</maintainer>
  <license>MIT</license>

  <!-- Dependências de pacotes ROS 2 -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <!-- Dependências de pacotes não-ROS -->
  <exec_depend>rplidar</exec_depend>
  <exec_depend>opencv-python</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
